simdX86/c2nimsrc/simdSse.h

__m128d _mm_mul_sd (__m128d a, __m128d b);
__m128 _mm_mul_ss (__m128 a, __m128 b);
__m64 _mm_mul_su32 (__m64 a, __m64 b);
__m128i _mm_mulhi_epi16 (__m128i a, __m128i b);
__m128i _mm_mulhi_epu16 (__m128i a, __m128i b);
__m64 _mm_mulhi_pi16 (__m64 a, __m64 b);
__m64 _mm_mulhi_pu16 (__m64 a, __m64 b);
__m128i _mm_mulhrs_epi16 (__m128i a, __m128i b);
__m64 _mm_mulhrs_pi16 (__m64 a, __m64 b);
__m128i _mm_mullo_epi16 (__m128i a, __m128i b);
__m128i _mm_mullo_epi32 (__m128i a, __m128i b);
__m64 _mm_mullo_pi16 (__m64 a, __m64 b);
__m128d _mm_or_pd (__m128d a, __m128d b);
__m128 _mm_or_ps (__m128 a, __m128 b);
__m128i _mm_or_si128 (__m128i a, __m128i b);
__m64 _mm_or_si64 (__m64 a, __m64 b);
__m128i _mm_packs_epi16 (__m128i a, __m128i b);
__m128i _mm_packs_epi32 (__m128i a, __m128i b);
__m64 _mm_packs_pi16 (__m64 a, __m64 b);
__m64 _mm_packs_pi32 (__m64 a, __m64 b);
__m64 _mm_packs_pu16 (__m64 a, __m64 b);
__m64 _m_packssdw (__m64 a, __m64 b);
__m64 _m_packsswb (__m64 a, __m64 b);
__m128i _mm_packus_epi16 (__m128i a, __m128i b);
__m128i _mm_packus_epi32 (__m128i a, __m128i b);
__m64 _m_packuswb (__m64 a, __m64 b);
__m64 _m_paddb (__m64 a, __m64 b);
__m64 _m_paddd (__m64 a, __m64 b);
__m64 _m_paddsb (__m64 a, __m64 b);
__m64 _m_paddsw (__m64 a, __m64 b);
__m64 _m_paddusb (__m64 a, __m64 b);
__m64 _m_paddusw (__m64 a, __m64 b);
__m64 _m_paddw (__m64 a, __m64 b);
__m64 _m_pand (__m64 a, __m64 b);
__m64 _m_pandn (__m64 a, __m64 b);
void _mm_pause (void);
__m64 _m_pavgb (__m64 a, __m64 b);
__m64 _m_pavgw (__m64 a, __m64 b);
__m64 _m_pcmpeqb (__m64 a, __m64 b);
__m64 _m_pcmpeqd (__m64 a, __m64 b);
__m64 _m_pcmpeqw (__m64 a, __m64 b);
__m64 _m_pcmpgtb (__m64 a, __m64 b);
__m64 _m_pcmpgtd (__m64 a, __m64 b);
__m64 _m_pcmpgtw (__m64 a, __m64 b);
int _m_pextrw (__m64 a, int imm8);
__m64 _m_pinsrw (__m64 a, int i, int imm8);
__m64 _m_pmaddwd (__m64 a, __m64 b);
__m64 _m_pmaxsw (__m64 a, __m64 b);
__m64 _m_pmaxub (__m64 a, __m64 b);
__m64 _m_pminsw (__m64 a, __m64 b);
__m64 _m_pminub (__m64 a, __m64 b);
int _m_pmovmskb (__m64 a);
__m64 _m_pmulhuw (__m64 a, __m64 b);
__m64 _m_pmulhw (__m64 a, __m64 b);
__m64 _m_pmullw (__m64 a, __m64 b);
__m64 _m_por (__m64 a, __m64 b);
void _mm_prefetch (char const* p, int i);
__m64 _m_psadbw (__m64 a, __m64 b);
__m64 _m_pshufw (__m64 a, int imm8);
__m64 _m_pslld (__m64 a, __m64 count);
__m64 _m_pslldi (__m64 a, int imm8);
__m64 _m_psllq (__m64 a, __m64 count);
__m64 _m_psllqi (__m64 a, int imm8);
__m64 _m_psllw (__m64 a, __m64 count);
__m64 _m_psllwi (__m64 a, int imm8);
__m64 _m_psrad (__m64 a, __m64 count);
__m64 _m_psradi (__m64 a, int imm8);
__m64 _m_psraw (__m64 a, __m64 count);
__m64 _m_psrawi (__m64 a, int imm8);
__m64 _m_psrld (__m64 a, __m64 count);
__m64 _m_psrldi (__m64 a, int imm8);
__m64 _m_psrlq (__m64 a, __m64 count);
__m64 _m_psrlqi (__m64 a, int imm8);
__m64 _m_psrlw (__m64 a, __m64 count);
__m64 _m_psrlwi (__m64 a, int imm8);
__m64 _m_psubb (__m64 a, __m64 b);
__m64 _m_psubd (__m64 a, __m64 b);
__m64 _m_psubsb (__m64 a, __m64 b);
__m64 _m_psubsw (__m64 a, __m64 b);
__m64 _m_psubusb (__m64 a, __m64 b);
__m64 _m_psubusw (__m64 a, __m64 b);
__m64 _m_psubw (__m64 a, __m64 b);
__m64 _m_punpckhbw (__m64 a, __m64 b);
__m64 _m_punpckhdq (__m64 a, __m64 b);
__m64 _m_punpckhwd (__m64 a, __m64 b);
__m64 _m_punpcklbw (__m64 a, __m64 b);
__m64 _m_punpckldq (__m64 a, __m64 b);
__m64 _m_punpcklwd (__m64 a, __m64 b);
__m64 _m_pxor (__m64 a, __m64 b);
__m128 _mm_rcp_ps (__m128 a);
__m128 _mm_rcp_ss (__m128 a);
__m128d _mm_round_pd (__m128d a, int rounding);
__m128 _mm_round_ps (__m128 a, int rounding);
__m128d _mm_round_sd (__m128d a, __m128d b, int rounding);
__m128 _mm_round_ss (__m128 a, __m128 b, int rounding);
__m128 _mm_rsqrt_ps (__m128 a);
__m128 _mm_rsqrt_ss (__m128 a);
__m128i _mm_sad_epu8 (__m128i a, __m128i b);
__m64 _mm_sad_pu8 (__m64 a, __m64 b);
__m128i _mm_set_epi16 (short e7, short e6, short e5, short e4, short e3, short e2, short e1, short e0);
__m128i _mm_set_epi32 (int e3, int e2, int e1, int e0);
__m128i _mm_set_epi64 (__m64 e1, __m64 e0);
__m128i _mm_set_epi64x (__int64 e1, __int64 e0);
__m128i _mm_set_epi8 (char e15, char e14, char e13, char e12, char e11, char e10, char e9, char e8, char e7, char e6, char e5, char e4, char e3, char e2, char e1, char e0);
void _MM_SET_EXCEPTION_MASK (unsigned int a);
void _MM_SET_EXCEPTION_STATE (unsigned int a);
void _MM_SET_FLUSH_ZERO_MODE (unsigned int a);
__m128d _mm_set_pd (double e1, double e0);
__m128d _mm_set_pd1 (double a);
__m64 _mm_set_pi16 (short e3, short e2, short e1, short e0);
__m64 _mm_set_pi32 (int e1, int e0);
__m64 _mm_set_pi8 (char e7, char e6, char e5, char e4, char e3, char e2, char e1, char e0);
__m128 _mm_set_ps (float e3, float e2, float e1, float e0);
__m128 _mm_set_ps1 (float a);
void _MM_SET_ROUNDING_MODE (unsigned int a);
__m128d _mm_set_sd (double a);
__m128 _mm_set_ss (float a);
__m128i _mm_set1_epi16 (short a);
__m128i _mm_set1_epi32 (int a);
__m128i _mm_set1_epi64 (__m64 a);
__m128i _mm_set1_epi64x (__int64 a);
__m128i _mm_set1_epi8 (char a);
__m128d _mm_set1_pd (double a);
__m64 _mm_set1_pi16 (short a);
__m64 _mm_set1_pi32 (int a);
__m64 _mm_set1_pi8 (char a);
__m128 _mm_set1_ps (float a);
void _mm_setcsr (unsigned int a);