simdX86/simdSseGeneric.nim

proc mul_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_mul_sd", header: "immintrin.h".}
proc mul_ss*(a: m128; b: m128): m128 {.importc: "_mm_mul_ss", header: "immintrin.h".}
proc mul_su32*(a: m64; b: m64): m64 {.importc: "_mm_mul_su32", header: "immintrin.h".}
proc mulhi_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_mulhi_epi16",
    header: "immintrin.h".}
proc mulhi_epu16*(a: m128i; b: m128i): m128i {.importc: "_mm_mulhi_epu16",
    header: "immintrin.h".}
proc mulhi_pi16*(a: m64; b: m64): m64 {.importc: "_mm_mulhi_pi16", header: "immintrin.h".}
proc mulhi_pu16*(a: m64; b: m64): m64 {.importc: "_mm_mulhi_pu16", header: "immintrin.h".}
proc mulhrs_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_mulhrs_epi16",
    header: "immintrin.h".}
proc mulhrs_pi16*(a: m64; b: m64): m64 {.importc: "_mm_mulhrs_pi16",
                                   header: "immintrin.h".}
proc mullo_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_mullo_epi16",
    header: "immintrin.h".}
proc mullo_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_mullo_epi32",
    header: "immintrin.h".}
proc mullo_pi16*(a: m64; b: m64): m64 {.importc: "_mm_mullo_pi16", header: "immintrin.h".}
proc `or`*(a: m128d; b: m128d): m128d {.importc: "_mm_or_pd", header: "immintrin.h".}
proc `or`*(a: m128; b: m128): m128 {.importc: "_mm_or_ps", header: "immintrin.h".}
proc or_si128*(a: m128i; b: m128i): m128i {.importc: "_mm_or_si128",
                                      header: "immintrin.h".}
proc or_si64*(a: m64; b: m64): m64 {.importc: "_mm_or_si64", header: "immintrin.h".}
proc packs_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_packs_epi16",
    header: "immintrin.h".}
proc packs_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_packs_epi32",
    header: "immintrin.h".}
proc packs_pi16*(a: m64; b: m64): m64 {.importc: "_mm_packs_pi16", header: "immintrin.h".}
proc packs_pi32*(a: m64; b: m64): m64 {.importc: "_mm_packs_pi32", header: "immintrin.h".}
proc packs_pu16*(a: m64; b: m64): m64 {.importc: "_mm_packs_pu16", header: "immintrin.h".}
proc packssdw*(a: m64; b: m64): m64 {.importc: "_m_packssdw", header: "immintrin.h".}
proc packsswb*(a: m64; b: m64): m64 {.importc: "_m_packsswb", header: "immintrin.h".}
proc packus_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_packus_epi16",
    header: "immintrin.h".}
proc packus_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_packus_epi32",
    header: "immintrin.h".}
proc packuswb*(a: m64; b: m64): m64 {.importc: "_m_packuswb", header: "immintrin.h".}
proc paddb*(a: m64; b: m64): m64 {.importc: "_m_paddb", header: "immintrin.h".}
proc paddd*(a: m64; b: m64): m64 {.importc: "_m_paddd", header: "immintrin.h".}
proc paddsb*(a: m64; b: m64): m64 {.importc: "_m_paddsb", header: "immintrin.h".}
proc paddsw*(a: m64; b: m64): m64 {.importc: "_m_paddsw", header: "immintrin.h".}
proc paddusb*(a: m64; b: m64): m64 {.importc: "_m_paddusb", header: "immintrin.h".}
proc paddusw*(a: m64; b: m64): m64 {.importc: "_m_paddusw", header: "immintrin.h".}
proc paddw*(a: m64; b: m64): m64 {.importc: "_m_paddw", header: "immintrin.h".}
proc pand*(a: m64; b: m64): m64 {.importc: "_m_pand", header: "immintrin.h".}
proc pandn*(a: m64; b: m64): m64 {.importc: "_m_pandn", header: "immintrin.h".}
proc pause*() {.importc: "_mm_pause", header: "immintrin.h".}
proc pavgb*(a: m64; b: m64): m64 {.importc: "_m_pavgb", header: "immintrin.h".}
proc pavgw*(a: m64; b: m64): m64 {.importc: "_m_pavgw", header: "immintrin.h".}
proc pcmpeqb*(a: m64; b: m64): m64 {.importc: "_m_pcmpeqb", header: "immintrin.h".}
proc pcmpeqd*(a: m64; b: m64): m64 {.importc: "_m_pcmpeqd", header: "immintrin.h".}
proc pcmpeqw*(a: m64; b: m64): m64 {.importc: "_m_pcmpeqw", header: "immintrin.h".}
proc pcmpgtb*(a: m64; b: m64): m64 {.importc: "_m_pcmpgtb", header: "immintrin.h".}
proc pcmpgtd*(a: m64; b: m64): m64 {.importc: "_m_pcmpgtd", header: "immintrin.h".}
proc pcmpgtw*(a: m64; b: m64): m64 {.importc: "_m_pcmpgtw", header: "immintrin.h".}
proc pextrw*(a: m64; imm8: cint): cint {.importc: "_m_pextrw", header: "immintrin.h".}
proc pinsrw*(a: m64; i: cint; imm8: cint): m64 {.importc: "_m_pinsrw",
    header: "immintrin.h".}
proc pmaddwd*(a: m64; b: m64): m64 {.importc: "_m_pmaddwd", header: "immintrin.h".}
proc pmaxsw*(a: m64; b: m64): m64 {.importc: "_m_pmaxsw", header: "immintrin.h".}
proc pmaxub*(a: m64; b: m64): m64 {.importc: "_m_pmaxub", header: "immintrin.h".}
proc pminsw*(a: m64; b: m64): m64 {.importc: "_m_pminsw", header: "immintrin.h".}
proc pminub*(a: m64; b: m64): m64 {.importc: "_m_pminub", header: "immintrin.h".}
proc pmovmskb*(a: m64): cint {.importc: "_m_pmovmskb", header: "immintrin.h".}
proc pmulhuw*(a: m64; b: m64): m64 {.importc: "_m_pmulhuw", header: "immintrin.h".}
proc pmulhw*(a: m64; b: m64): m64 {.importc: "_m_pmulhw", header: "immintrin.h".}
proc pmullw*(a: m64; b: m64): m64 {.importc: "_m_pmullw", header: "immintrin.h".}
proc por*(a: m64; b: m64): m64 {.importc: "_m_por", header: "immintrin.h".}
proc prefetch*(p: cstring; i: cint) {.importc: "_mm_prefetch", header: "immintrin.h".}
proc psadbw*(a: m64; b: m64): m64 {.importc: "_m_psadbw", header: "immintrin.h".}
proc pshufw*(a: m64; imm8: cint): m64 {.importc: "_m_pshufw", header: "immintrin.h".}
proc pslld*(a: m64; count: m64): m64 {.importc: "_m_pslld", header: "immintrin.h".}
proc pslldi*(a: m64; imm8: cint): m64 {.importc: "_m_pslldi", header: "immintrin.h".}
proc psllq*(a: m64; count: m64): m64 {.importc: "_m_psllq", header: "immintrin.h".}
proc psllqi*(a: m64; imm8: cint): m64 {.importc: "_m_psllqi", header: "immintrin.h".}
proc psllw*(a: m64; count: m64): m64 {.importc: "_m_psllw", header: "immintrin.h".}
proc psllwi*(a: m64; imm8: cint): m64 {.importc: "_m_psllwi", header: "immintrin.h".}
proc psrad*(a: m64; count: m64): m64 {.importc: "_m_psrad", header: "immintrin.h".}
proc psradi*(a: m64; imm8: cint): m64 {.importc: "_m_psradi", header: "immintrin.h".}
proc psraw*(a: m64; count: m64): m64 {.importc: "_m_psraw", header: "immintrin.h".}
proc psrawi*(a: m64; imm8: cint): m64 {.importc: "_m_psrawi", header: "immintrin.h".}
proc psrld*(a: m64; count: m64): m64 {.importc: "_m_psrld", header: "immintrin.h".}
proc psrldi*(a: m64; imm8: cint): m64 {.importc: "_m_psrldi", header: "immintrin.h".}
proc psrlq*(a: m64; count: m64): m64 {.importc: "_m_psrlq", header: "immintrin.h".}
proc psrlqi*(a: m64; imm8: cint): m64 {.importc: "_m_psrlqi", header: "immintrin.h".}
proc psrlw*(a: m64; count: m64): m64 {.importc: "_m_psrlw", header: "immintrin.h".}
proc psrlwi*(a: m64; imm8: cint): m64 {.importc: "_m_psrlwi", header: "immintrin.h".}
proc psubb*(a: m64; b: m64): m64 {.importc: "_m_psubb", header: "immintrin.h".}
proc psubd*(a: m64; b: m64): m64 {.importc: "_m_psubd", header: "immintrin.h".}
proc psubsb*(a: m64; b: m64): m64 {.importc: "_m_psubsb", header: "immintrin.h".}
proc psubsw*(a: m64; b: m64): m64 {.importc: "_m_psubsw", header: "immintrin.h".}
proc psubusb*(a: m64; b: m64): m64 {.importc: "_m_psubusb", header: "immintrin.h".}
proc psubusw*(a: m64; b: m64): m64 {.importc: "_m_psubusw", header: "immintrin.h".}
proc psubw*(a: m64; b: m64): m64 {.importc: "_m_psubw", header: "immintrin.h".}
proc punpckhbw*(a: m64; b: m64): m64 {.importc: "_m_punpckhbw", header: "immintrin.h".}
proc punpckhdq*(a: m64; b: m64): m64 {.importc: "_m_punpckhdq", header: "immintrin.h".}
proc punpckhwd*(a: m64; b: m64): m64 {.importc: "_m_punpckhwd", header: "immintrin.h".}
proc punpcklbw*(a: m64; b: m64): m64 {.importc: "_m_punpcklbw", header: "immintrin.h".}
proc punpckldq*(a: m64; b: m64): m64 {.importc: "_m_punpckldq", header: "immintrin.h".}
proc punpcklwd*(a: m64; b: m64): m64 {.importc: "_m_punpcklwd", header: "immintrin.h".}
proc pxor*(a: m64; b: m64): m64 {.importc: "_m_pxor", header: "immintrin.h".}
proc rcp*(a: m128): m128 {.importc: "_mm_rcp_ps", header: "immintrin.h".}
proc rcp_ss*(a: m128): m128 {.importc: "_mm_rcp_ss", header: "immintrin.h".}
proc round*(a: m128d; rounding: cint): m128d {.importc: "_mm_round_pd",
    header: "immintrin.h".}
proc round*(a: m128; rounding: cint): m128 {.importc: "_mm_round_ps",
                                       header: "immintrin.h".}
proc round_sd*(a: m128d; b: m128d; rounding: cint): m128d {.importc: "_mm_round_sd",
    header: "immintrin.h".}
proc round_ss*(a: m128; b: m128; rounding: cint): m128 {.importc: "_mm_round_ss",
    header: "immintrin.h".}
proc rsqrt*(a: m128): m128 {.importc: "_mm_rsqrt_ps", header: "immintrin.h".}
proc rsqrt_ss*(a: m128): m128 {.importc: "_mm_rsqrt_ss", header: "immintrin.h".}
proc sad_epu8*(a: m128i; b: m128i): m128i {.importc: "_mm_sad_epu8",
                                      header: "immintrin.h".}
proc sad_pu8*(a: m64; b: m64): m64 {.importc: "_mm_sad_pu8", header: "immintrin.h".}
proc setepi16*(e7: cshort; e6: cshort; e5: cshort; e4: cshort; e3: cshort; e2: cshort;
              e1: cshort; e0: cshort): m128i {.importc: "_mm_set_epi16",
    header: "immintrin.h".}
proc setepi32*(e3: cint; e2: cint; e1: cint; e0: cint): m128i {.importc: "_mm_set_epi32",
    header: "immintrin.h".}
proc setepi64*(e1: m64; e0: m64): m128i {.importc: "_mm_set_epi64",
                                    header: "immintrin.h".}
proc setepi64x*(e1: int64; e0: int64): m128i {.importc: "_mm_set_epi64x",
    header: "immintrin.h".}
proc setepi8*(e15: char; e14: char; e13: char; e12: char; e11: char; e10: char; e9: char;
             e8: char; e7: char; e6: char; e5: char; e4: char; e3: char; e2: char; e1: char;
             e0: char): m128i {.importc: "_mm_set_epi8", header: "immintrin.h".}
proc SET_EXCEPTION_MASK*(a: cuint) {.importc: "_MM_SET_EXCEPTION_MASK",
                                  header: "immintrin.h".}
proc SET_EXCEPTION_STATE*(a: cuint) {.importc: "_MM_SET_EXCEPTION_STATE",
                                   header: "immintrin.h".}
proc SET_FLUSH_ZERO_MODE*(a: cuint) {.importc: "_MM_SET_FLUSH_ZERO_MODE",
                                   header: "immintrin.h".}
proc setpd*(e1: cdouble; e0: cdouble): m128d {.importc: "_mm_set_pd",
    header: "immintrin.h".}
proc setpd1*(a: cdouble): m128d {.importc: "_mm_set_pd1", header: "immintrin.h".}
proc setpi16*(e3: cshort; e2: cshort; e1: cshort; e0: cshort): m64 {.
    importc: "_mm_set_pi16", header: "immintrin.h".}
proc setpi32*(e1: cint; e0: cint): m64 {.importc: "_mm_set_pi32", header: "immintrin.h".}
proc setpi8*(e7: char; e6: char; e5: char; e4: char; e3: char; e2: char; e1: char; e0: char): m64 {.
    importc: "_mm_set_pi8", header: "immintrin.h".}
proc setps*(e3: cfloat; e2: cfloat; e1: cfloat; e0: cfloat): m128 {.importc: "_mm_set_ps",
    header: "immintrin.h".}
proc setps1*(a: cfloat): m128 {.importc: "_mm_set_ps1", header: "immintrin.h".}
proc SET_ROUNDING_MODE*(a: cuint) {.importc: "_MM_SET_ROUNDING_MODE",
                                 header: "immintrin.h".}
proc setsd*(a: cdouble): m128d {.importc: "_mm_set_sd", header: "immintrin.h".}
proc setss*(a: cfloat): m128 {.importc: "_mm_set_ss", header: "immintrin.h".}
proc set1_epi16*(a: cshort): m128i {.importc: "_mm_set1_epi16", header: "immintrin.h".}
proc set1_epi32*(a: cint): m128i {.importc: "_mm_set1_epi32", header: "immintrin.h".}
proc set1_epi64*(a: m64): m128i {.importc: "_mm_set1_epi64", header: "immintrin.h".}
proc set1_epi64x*(a: int64): m128i {.importc: "_mm_set1_epi64x", header: "immintrin.h".}
proc set1_epi8*(a: char): m128i {.importc: "_mm_set1_epi8", header: "immintrin.h".}
proc set1*(a: cdouble): m128d {.importc: "_mm_set1_pd", header: "immintrin.h".}
proc set1_pi16*(a: cshort): m64 {.importc: "_mm_set1_pi16", header: "immintrin.h".}
proc set1_pi32*(a: cint): m64 {.importc: "_mm_set1_pi32", header: "immintrin.h".}
proc set1_pi8*(a: char): m64 {.importc: "_mm_set1_pi8", header: "immintrin.h".}
proc set1*(a: cfloat): m128 {.importc: "_mm_set1_ps", header: "immintrin.h".}
proc setcsr*(a: cuint) {.importc: "_mm_setcsr", header: "immintrin.h".}
proc setr_epi16*(e7: cshort; e6: cshort; e5: cshort; e4: cshort; e3: cshort; e2: cshort;
